# protective-stop

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  esp32_flash.sh  repos.yaml  roslibpy_client.py
.github/: dependabot.yml
.github/workflows/: build.yml  firmware-build.yml  host-check.yml  (+3 more)
archive/: README.md
archive/protective_stop_remote/: package.xml  rosdep.yaml  setup.py
archive/protective_stop_remote/protective_stop_remote/: app.py  button.py  config.json  main.py  power.py  pstop.py  ui.py
archive/protective_stop_remote/protective_stop_remote/templates/: index.html
archive/protective_stop_remote/tests/: pytest.ini  test_app.py
components/microlink/: CMakeLists.txt  Kconfig
components/microlink/components/wireguard_lwip/: CMakeLists.txt  LICENSE  README.md
components/microlink/components/wireguard_lwip/example/: wireguard-platform.c
components/microlink/components/wireguard_lwip/src/: crypto.h  lwip_compat.h  wireguard-platform-esp32.c  wireguard-platform.h  wireguard.c  wireguard.h  wireguardif.c  wireguardif.h
components/microlink/components/wireguard_lwip/src/crypto/cortex/: README  mul.s  scalarmult.c  scalarmult.h  sqr.s
components/microlink/components/wireguard_lwip/src/crypto/refc/: blake2s.c  chacha20.c  chacha20poly1305.c  poly1305-donna-32.h  x25519-license.txt  x25519.c
components/microlink/include/: microlink.h  microlink_internal.h  ml_app.h  ml_at_socket.h  ml_cellular.h  ml_config_httpd.h  ml_ip_blink.h  ml_net_switch.h
components/microlink/src/: microlink.c  ml_app.c  ml_at_socket.c  ml_cellular.c  ml_config_html.h  ml_config_httpd.c  ml_coord.c  ml_derp.c  ml_h2.c  ml_net_io.c  ml_net_switch.c  ml_noise.c  ml_peer_nvs.c  ml_stun.c  ml_tcp.c  ml_udp.c  ml_wg_mgr.c  ml_zerocopy.c  nacl_box.c  nacl_box.h  x25519.c  x25519.h
components/pstop/: CMakeLists.txt
components/pstop/port/: poll.h  pstop_time_esp.c
docs/: API.md  FAILOVER_AND_ARMING_DESIGN_2026-07-21.md  FLEET_SERVER.md  Hardware.md  INTERNAL_RAM_REDUCTION.md  MISRA_COMPLIANCE_2026-07-21.md  MULTI_REMOTE_VALIDATION_2026-07-22.md  OSHWA_COMPLIANCE.md  PEER_SCALING_DESIGN.md  PSTOP_C_MIN_STOP_OPTION.md  PSTOP_SAFETY_DESIGN.md  RECOVERY_PLAYBOOK.md  Robot-Quickstart.md  SAFETY_CHAIN.md  SAME_LAN_DIRECT_PATH_PLAN.md  Software.md  TAILSCALE_ISOLATION.md  TESTING.md  TROUBLESHOOTING.md  TWO_SITE_FAILOVER_2026-07-21.md  USB_NCM_STABILITY.md
estop_msg/: CMakeLists.txt  package.xml
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.credentials.example  sdkconfig.defaults
firmware/components/dcs_support/: CMakeLists.txt
firmware/components/dcs_support/include/: dcs_identity.h  dcs_support.h
firmware/components/dcs_support/src/: dcs_admin_html.h  dcs_admin_pages.c  dcs_boot.c  dcs_eth.c  dcs_identity.c  dcs_internal.h  dcs_net_inet.c  dcs_net_liveness.c  dcs_net_supervisor.c  dcs_nvs.c  dcs_pstop_ring.c  dcs_rgb.c  dcs_safety.c  dcs_support.c  dcs_telemetry.c  dcs_wifi.c  panic_log.c  panic_log.h
hardware/: FF0126BBCAEA01.stp  JACK-USBC-6SMT-2SL.stp  LED.step  Part Studio 2 - LED Lens.step  README.md  base.3mf  base.stl  base_01.stl  casing.FCStd  led.3mf  led.stl  lid-minus-led.stl  lid.stl  lid_01.stl  new_print.3mf  print.3mf
host/: Makefile  README.md  machine.toml  machine_app_runner.c
protective_stop/: CMakeLists.txt  README.md  package.xml
protective_stop/config/: pstop_settings.yaml
protective_stop/scripts/: machine_node.py  pstop_node.py
protective_stop/src/: machine_node.cpp
protective_stop_msg/: CMakeLists.txt  package.xml
protective_stop_msg/msg/: ProtectiveStopDebug.msg  ProtectiveStopParams.msg  ProtectiveStopStatus.msg
protective_stop_msg/srv/: BypassProtectiveStop.srv
protective_stop_node/: CMakeLists.txt  package.xml  setup.cfg
protective_stop_node/launch/: protective_stop_node.launch.py  protective_stop_node.launch.yaml
protective_stop_node/protective_stop_node/: __init__.py  models.py  protective_stop_node.py
protective_stop_node/protective_stop_node/test_utils/: base_test.py  helpers.py
protective_stop_node/test/: launch.test.py  unmonitored_mode.test.py  unsafe_mode.test.py
protective_stop_remote_example/: README.md  channel.json  vite.config.ts
pstop_MCU/: pstop_MCU.ino
pstop_c/: CMakeLists.txt  Containerfile
pstop_c/.bullseye/: covselect.txt
pstop_c/cmake/: Coverage.cmake
pstop_c/examples/client/: client_app.c
pstop_c/examples/machine/: machine_app.c
pstop_c/pstop/: CMakeLists.txt
pstop_c/pstop/include/pstop/: checksum.h  config.h  constants.h  device_id.h  endian.h  error.h  machine.h  machine_client_data.h  operator.h  os.h  protocol.h  protocol_data.h  pstop_application.h  pstop_client.h  pstop_client_data.h  pstop_msg.h  pstop_remote_data.h  time.h
pstop_c/pstop/src/pstop/: checksum.c  device_id.c  endian.c  machine.c  machine_client_data.c  os.c  protocol.c  protocol_data.c  pstop_application.c  pstop_client.c  pstop_client_data.c  pstop_msg.c  pstop_remote_data.c  time.c
pstop_c/pstop/test/include/pstop/: test_utils.h
pstop_c/pstop/test/src/pstop/: device_id_test.c  endian_test.c  machine_test.c  machine_timeout_test.c  main.c  protocol_test.c  pstop_application_test.c  pstop_client_data_test.c  pstop_client_test.c  pstop_msg_test.c  pstop_remote_data_test.c  pstop_tests.yml  test_utils.c
pstop_c/pstop/test/src/pstop/transport/: tcp_transport_test.c
pstop_c/scripts/: run-coverage.sh
pstop_c/transport/: CMakeLists.txt
pstop_c/transport/include/transport/: transport.h
pstop_c/transport/include/transport/udp/: udp_transport.h
pstop_c/transport/src/transport/udp/: udp_transport.c
pstop_msg/: CMakeLists.txt  package.xml
raspi_pstop/: button.py  config.json  config.py  main.py  power.py  pstop.py
test/: aggressive_ota.sh  auto_recover.sh  chaos_ladder.sh  full_test_after_recovery.sh  longsoak.sh  netem2.csv  netem_ladder.sh  test_suite.sh
tools/: chaos_soak.py  disco_storm.py  flash_pstop.sh  misra_check.sh  pstop_chaos_proxy.py  pstop_multi_machine_test.py  pstop_multi_remote_test.py  pstop_test_remote.py  robust_test.py
(+75 files in other folders)
